--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -22,6 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="669.60000000000002" y="33.733133433283363"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="wX3-YV-DIP">
@@ -36,7 +37,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7aN-C6-oTh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="713" y="34"/>
+            <point key="canvasLocation" x="1382" y="34"/>
         </scene>
     </scenes>
 </document>
