--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -9,6 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Bodoni72.ttc">
+            <string>BodoniSvtyTwoITCTT-Book</string>
+        </array>
         <array key="Courier.ttc">
             <string>Courier</string>
         </array>
@@ -28,29 +31,45 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Avf-Yj-vcY">
                                 <rect key="frame" x="16" y="481" width="343" height="30"/>
-                                <state key="normal" title="Tap Anywhere to Begin"/>
+                                <state key="normal" title="Tap to Begin"/>
                                 <connections>
                                     <action selector="beginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZVR-uM-4IG"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Third Eye" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Pu-Op-rib">
-                                <rect key="frame" x="104" y="70" width="167" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDr-Ae-gQS">
+                                <rect key="frame" x="10" y="20" width="146" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="so7-lF-Fdk"/>
+                                    <constraint firstAttribute="width" constant="146" id="vKO-Bw-IBp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Enter as Visually Impared"/>
+                                <connections>
+                                    <action selector="changeMode:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OLA-yh-FKi"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Visualize" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Pu-Op-rib">
+                                <rect key="frame" x="16" y="92" width="343" height="42.5"/>
+                                <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Book" family="Bodoni 72" pointSize="35"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Avf-Yj-vcY" firstAttribute="top" secondItem="1Pu-Op-rib" secondAttribute="bottom" constant="390" id="0d1-zc-PCR"/>
-                            <constraint firstItem="1Pu-Op-rib" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="21M-WM-KEJ"/>
-                            <constraint firstItem="1Pu-Op-rib" firstAttribute="top" secondItem="NpW-nU-KRx" secondAttribute="bottom" constant="50" id="J6s-Ae-8YU"/>
-                            <constraint firstItem="Avf-Yj-vcY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="Wto-D7-rD9"/>
-                            <constraint firstAttribute="trailing" secondItem="Avf-Yj-vcY" secondAttribute="trailing" constant="16" id="tMR-EF-qj9"/>
+                            <constraint firstItem="Avf-Yj-vcY" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" constant="16" id="6z1-U5-t2z"/>
+                            <constraint firstItem="nDr-Ae-gQS" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" constant="10" id="I3h-as-keP"/>
+                            <constraint firstItem="1Pu-Op-rib" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" constant="16" id="Kjf-oV-aXw"/>
+                            <constraint firstItem="Azh-wt-un5" firstAttribute="trailing" secondItem="1Pu-Op-rib" secondAttribute="trailing" constant="16" id="a71-wo-gHK"/>
+                            <constraint firstItem="meC-5s-1xX" firstAttribute="top" secondItem="Avf-Yj-vcY" secondAttribute="bottom" constant="156" id="cr3-u5-M4f"/>
+                            <constraint firstItem="1Pu-Op-rib" firstAttribute="top" secondItem="NpW-nU-KRx" secondAttribute="bottom" constant="72" id="egy-eD-ZcL"/>
+                            <constraint firstItem="nDr-Ae-gQS" firstAttribute="top" secondItem="NpW-nU-KRx" secondAttribute="bottom" id="fEc-wO-hqO"/>
+                            <constraint firstItem="Azh-wt-un5" firstAttribute="trailing" secondItem="Avf-Yj-vcY" secondAttribute="trailing" constant="16" id="g5O-M5-tFe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Azh-wt-un5"/>
                     </view>
                     <connections>
+                        <outlet property="userModeButton" destination="nDr-Ae-gQS" id="ZyQ-DS-IlR"/>
                         <outlet property="welcomeLabel" destination="1Pu-Op-rib" id="5hE-Dk-d7D"/>
                         <segue destination="jwP-zA-I6r" kind="showDetail" identifier="bringToVisualSupportView" action="showViewController:sender:" id="U3n-zl-NnF"/>
                         <segue destination="Imu-dh-YYJ" kind="show" identifier="bringToDeveloperView" id="gXV-fH-a1H"/>
@@ -58,7 +77,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="502" y="61"/>
+            <point key="canvasLocation" x="501.60000000000002" y="60.719640179910051"/>
         </scene>
         <!--Visual Support View Controller-->
         <scene sceneID="wX3-YV-DIP">
