--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -112,6 +112,28 @@
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="JY6-DW-bPc">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" clipsSubviews="YES" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLf-ch-1NV">
+                                            <rect key="frame" x="295" y="20" width="60" height="60"/>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="60" id="Gy1-qf-djr"/>
+                                                <constraint firstAttribute="height" constant="60" id="Vmj-Ce-4DB"/>
+                                            </constraints>
+                                            <state key="normal" image="Home-Button">
+                                                <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="aLf-ch-1NV" secondAttribute="trailing" constant="20" id="Dhb-Cy-yZT"/>
+                                        <constraint firstItem="aLf-ch-1NV" firstAttribute="top" secondItem="JY6-DW-bPc" secondAttribute="top" constant="20" id="TDD-F9-3W8"/>
+                                    </constraints>
                                 </view>
                                 <blurEffect style="light"/>
                             </visualEffectView>
@@ -238,4 +260,7 @@
             <point key="canvasLocation" x="1393" y="587"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Home-Button" width="512" height="512"/>
+    </resources>
 </document>
