--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -128,6 +128,9 @@
                                                     <integer key="value" value="5"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="exitView:" destination="jwP-zA-I6r" eventType="touchUpInside" id="451-lF-hup"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
