--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -113,9 +113,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <button opaque="NO" clipsSubviews="YES" alpha="0.90000000000000002" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLf-ch-1NV">
-                                            <rect key="frame" x="287" y="20" width="80" height="80"/>
-                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <button opaque="NO" clipsSubviews="YES" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLf-ch-1NV">
+                                            <rect key="frame" x="295" y="20" width="60" height="60"/>
+                                            <color key="backgroundColor" red="0.2037263215" green="0.1936997771" blue="0.29727274180000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="60" id="Gy1-qf-djr"/>
                                                 <constraint firstAttribute="height" constant="60" id="Vmj-Ce-4DB"/>
@@ -133,10 +133,73 @@
                                                 <action selector="exitView:" destination="jwP-zA-I6r" eventType="touchUpInside" id="451-lF-hup"/>
                                             </connections>
                                         </button>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f03-Jc-gC9">
+                                            <rect key="frame" x="20" y="20" width="255" height="60"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cL2-my-mHO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="255" height="60"/>
+                                                    <color key="backgroundColor" red="0.20372632145881653" green="0.19369977712631226" blue="0.29727274179458618" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="TU4-V2-yKI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                    <state key="normal" title="Select Mode">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="changeUserMode:" destination="jwP-zA-I6r" eventType="touchUpInside" id="Qg8-83-ZgC"/>
+                                                    </connections>
+                                                </button>
+                                                <button hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o4k-LJ-nXO">
+                                                    <rect key="frame" x="0.0" y="-20" width="255" height="60"/>
+                                                    <color key="backgroundColor" red="0.99727648499999999" green="0.49696779250000001" blue="0.32951986789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="sUe-ZM-wC3"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Analyze Objects">
+                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="modeSelected:" destination="jwP-zA-I6r" eventType="touchUpInside" id="g8D-a9-iTW"/>
+                                                    </connections>
+                                                </button>
+                                                <button hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A1y-WU-ncO">
+                                                    <rect key="frame" x="0.0" y="-20" width="255" height="60"/>
+                                                    <color key="backgroundColor" red="0.99727648499999999" green="0.49696779250000001" blue="0.32951986789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="den-Fp-BYd"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Analyze Text">
+                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="modeSelected:" destination="jwP-zA-I6r" eventType="touchUpInside" id="Vaf-jr-8JO"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="aLf-ch-1NV" secondAttribute="trailing" constant="20" id="Dhb-Cy-yZT"/>
                                         <constraint firstItem="aLf-ch-1NV" firstAttribute="top" secondItem="JY6-DW-bPc" secondAttribute="top" constant="20" id="TDD-F9-3W8"/>
+                                        <constraint firstItem="f03-Jc-gC9" firstAttribute="leading" secondItem="JY6-DW-bPc" secondAttribute="leading" constant="20" id="Tjm-uT-LMd"/>
+                                        <constraint firstItem="aLf-ch-1NV" firstAttribute="leading" secondItem="f03-Jc-gC9" secondAttribute="trailing" constant="20" id="h4h-dk-J1v"/>
+                                        <constraint firstItem="f03-Jc-gC9" firstAttribute="top" secondItem="JY6-DW-bPc" secondAttribute="top" constant="20" id="kqx-XT-0C7"/>
                                     </constraints>
                                 </view>
                                 <blurEffect style="light"/>
@@ -183,6 +246,8 @@
                         <outlet property="identificationText" destination="2h3-3J-0hh" id="cbc-Fb-xAA"/>
                         <outlet property="identificationView" destination="woE-Hs-sG2" id="41i-J3-1ak"/>
                         <outlet property="loadIndicator" destination="eoQ-YY-SBF" id="do0-1X-ppN"/>
+                        <outletCollection property="modeButtons" destination="o4k-LJ-nXO" collectionClass="NSMutableArray" id="RuS-lb-qDZ"/>
+                        <outletCollection property="modeButtons" destination="A1y-WU-ncO" collectionClass="NSMutableArray" id="NXQ-a9-cjl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7aN-C6-oTh" userLabel="First Responder" sceneMemberID="firstResponder"/>
