--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <button opaque="NO" clipsSubviews="YES" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLf-ch-1NV">
+                                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLf-ch-1NV">
                                             <rect key="frame" x="295" y="20" width="60" height="60"/>
                                             <color key="backgroundColor" red="0.2037263215" green="0.1936997771" blue="0.29727274180000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
@@ -242,6 +242,7 @@
                         <outlet property="analyzedImage" destination="Vev-pK-kTG" id="aLj-SK-Yag"/>
                         <outlet property="blurEffect" destination="qPO-tk-Hbn" id="lLj-Gt-w0F"/>
                         <outlet property="captureButton" destination="MfS-1b-ZTF" id="fbb-QI-2h6"/>
+                        <outlet property="chooseNewModel" destination="A1y-WU-ncO" id="KCf-2U-08h"/>
                         <outlet property="guessLabel" destination="KfB-9J-ilA" id="EDn-T5-Vm9"/>
                         <outlet property="identificationText" destination="2h3-3J-0hh" id="cbc-Fb-xAA"/>
                         <outlet property="identificationView" destination="woE-Hs-sG2" id="41i-J3-1ak"/>
